samples/bed/should_pass/unknown_score.bed
chr1	0	10	Name1	.
chr1	2	8	Name2	.
chr1	20	30	Name3	.
