samples/bed/should_fail/bad_fields.bed
chr1	0	10	Name1	10
chr1	a	12	Name2	0
chr1	20	30	Name3	10
